# huskylang_0.2

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  config.h.in  sedscript.sh
examples/: anomality.hsk  atoms.hsk  boolean.hsk  comments.hsk  errors.hsk  except_error.hsk  fibonacci.hsk  functions.hsk  functions_definitions_with_args.hsk  functions_overload.hsk  functions_with_no_args.hsk  list_functions.hsk  lists.hsk  meta_programming.hsk  query_endings.hsk  real.hsk  recursion.hsk  saved_function_calls.hsk  strings.hsk  test.hsk  tuples.hsk  type-0.2.hsk  variable_overloading.hsk  variables.hsk  windows.hsk
include/: argconfig.h  call_tree.h  data.h  dbg.h  function.h  huserr.h  list.h  main_utils.h  memory.h  non_posix.h  parser.h  performer.h  query.h  std.h  token.h  tokenizer.h  tokenizer_config.h  type.h  variable.h
src/: CMakeLists.txt  call_tree.c  call_tree_utils.c  data.c  function.c  huserr.c  iso_hacks.c  main.c  main_utils.c  memory.c  non_posix.c  parser.c  parser_element.c  performer.c  query.c  std.c  tokenizer.c  tokenizer_config.c  type.c  variable.c
src/inc/: dbg.h  list.h  memory.h  parser.h  parser_element.h
src/std/: arithm.c  atom.c  boolean.c  error.c  function.c  integral.c  io.c  list.c  number.c  real.c  saved.c  string.c  tuple.c  type.c  var.c
tests/: __init__.c  data.c  list.c  parser.c  parser_element.c  tokenizer.c  tokenizer_config.c  variable.c
toolchains/: Windows32bit.cmake  Windows64bit.cmake
